crates/quelch/src/azure/deploy/snapshots/quelch__azure__deploy__bicep__tests__generates_minimal_bicep_for_ingest_deployment.snap
---
source: crates/quelch/src/azure/deploy/bicep.rs
expression: bicep
---
// .quelch/azure/ingest.bicep — generated by Quelch 0.11.2
// DO NOT EDIT MANUALLY — re-run `quelch azure plan` to regenerate.
//
// Quelch does not provision Cosmos, AI Search, Key Vault, Container
// Apps environment, App Insights, or the AI provider — those are
// referenced via `existing`.  See docs/getting-started.md for the
// prerequisites list.

@description('Resource naming prefix')
param prefix string = 'quelch'

@description('Environment name (e.g. prod, staging)')
param environment string = 'prod'

@description('Azure region for all resources')
param location string = resourceGroup().location

// ─────────────────────────────────────────────────────────────────
// References to existing resources (provisioned by the operator)
// ─────────────────────────────────────────────────────────────────

resource cosmos 'Microsoft.DocumentDB/databaseAccounts@2024-05-15' existing = {
  name: 'quelch-prod-cosmos'
}

resource search 'Microsoft.Search/searchServices@2024-03-01-preview' existing = {
  name: 'quelch-prod-search'
}

resource kv 'Microsoft.KeyVault/vaults@2024-04-01-preview' existing = {
  name: 'quelch-prod-kv'
}

resource cae 'Microsoft.App/managedEnvironments@2024-03-01' existing = {
  name: 'quelch-prod-cae'
}

resource appi 'Microsoft.Insights/components@2020-02-02' existing = {
  name: 'quelch-prod-appi'
}

resource aiAccount 'Microsoft.CognitiveServices/accounts@2024-10-01' existing = {
  name: 'test'
}

// ─────────────────────────────────────────────────────────────────
// Cosmos database + containers (managed by Quelch)
// ─────────────────────────────────────────────────────────────────

resource cosmosDb 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases@2024-05-15' = {
  parent: cosmos
  name: 'quelch'
  properties: {
    resource: {
      id: 'quelch'
    }
    options: {}
  }
}

resource jiraIssues 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-issues'
  properties: {
    resource: {
      id: 'jira-issues'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource confluencePages 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'confluence-pages'
  properties: {
    resource: {
      id: 'confluence-pages'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource jiraSprints 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-sprints'
  properties: {
    resource: {
      id: 'jira-sprints'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource jiraFixVersions 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-fix-versions'
  properties: {
    resource: {
      id: 'jira-fix-versions'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource jiraProjects 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-projects'
  properties: {
    resource: {
      id: 'jira-projects'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource confluenceSpaces 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'confluence-spaces'
  properties: {
    resource: {
      id: 'confluence-spaces'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource quelchMeta 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'quelch-meta'
  properties: {
    resource: {
      id: 'quelch-meta'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

// ─────────────────────────────────────────────────────────────────
// Per-deployment: ingest
// ─────────────────────────────────────────────────────────────────

resource identity 'Microsoft.ManagedIdentity/userAssignedIdentities@2023-01-31' = {
  name: 'quelch-prod-ingest-id'
  location: location
}

// Cosmos DB Built-in Data Contributor — read/write to Cosmos containers.
var cosmosDataContributorRoleId = '00000000-0000-0000-0000-000000000002'
resource cosmosRoleAssignment 'Microsoft.DocumentDB/databaseAccounts/sqlRoleAssignments@2024-05-15' = {
  parent: cosmos
  name: guid(cosmos.id, identity.id, cosmosDataContributorRoleId)
  properties: {
    roleDefinitionId: '${cosmos.id}/sqlRoleDefinitions/${cosmosDataContributorRoleId}'
    principalId: identity.properties.principalId
    scope: cosmos.id
  }
}

// Search Index Data Contributor — push documents to and query AI Search.
var searchIndexDataContributorId = '8ebe5a00-799e-43f5-93ac-243d3dce84a7'
resource searchRoleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(search.id, identity.id, searchIndexDataContributorId)
  scope: search
  properties: {
    roleDefinitionId: subscriptionResourceId('Microsoft.Authorization/roleDefinitions', searchIndexDataContributorId)
    principalId: identity.properties.principalId
    principalType: 'ServicePrincipal'
  }
}

// Key Vault Secrets User — read secrets (MCP API key, source PATs).
var kvSecretsUserId = '4633458b-17de-408a-b874-0445c86b69e6'
resource kvRoleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(kv.id, identity.id, kvSecretsUserId)
  scope: kv
  properties: {
    roleDefinitionId: subscriptionResourceId('Microsoft.Authorization/roleDefinitions', kvSecretsUserId)
    principalId: identity.properties.principalId
    principalType: 'ServicePrincipal'
  }
}

// Cognitive Services User — call embedding + chat models on the AI provider.
var cogServicesUserId = 'a97b65f3-24c7-4388-baec-2e87135dc908'
resource aiRoleAssignment 'Microsoft.Authorization/roleAssignments@2022-04-01' = {
  name: guid(aiAccount.id, identity.id, cogServicesUserId)
  scope: aiAccount
  properties: {
    roleDefinitionId: subscriptionResourceId('Microsoft.Authorization/roleDefinitions', cogServicesUserId)
    principalId: identity.properties.principalId
    principalType: 'ServicePrincipal'
  }
}

resource app 'Microsoft.App/containerApps@2024-03-01' = {
  name: 'quelch-prod-ingest'
  location: location
  identity: {
    type: 'UserAssigned'
    userAssignedIdentities: {
      '${identity.id}': {}
    }
  }
  properties: {
    managedEnvironmentId: cae.id
    configuration: {
      secrets: [
        // TODO: populate jira-cloud-pat at deploy time.
        { name: 'jira-cloud-pat', keyVaultUrl: 'https://quelch-prod-kv.vault.azure.net/secrets/jira-cloud-pat', identity: identity.id }
]
    }
    template: {
      containers: [
        {
          image: 'ghcr.io/mklab-se/quelch:0.11.2'
          name: 'quelch'
          command: [
            'quelch'
          ]
          args: ['ingest', '--deployment', 'ingest']
          resources: {
            cpu: json('0.5')
            memory: '1.0Gi'
          }
          env: [
            { name: 'COSMOS_ENDPOINT', value: cosmos.properties.documentEndpoint }
            { name: 'AZURE_SEARCH_ENDPOINT', value: 'https://${search.name}.search.windows.net' }
            { name: 'APPLICATIONINSIGHTS_CONNECTION_STRING', value: appi.properties.ConnectionString }
            { name: 'JIRA_CLOUD_PAT', secretRef: 'jira-cloud-pat' }
]
        }
      ]
      scale: {
        minReplicas: 1
        maxReplicas: 1
      }
    }
  }
}
