crates/quelch/src/azure/deploy/snapshots/quelch__azure__deploy__bicep__tests__generates_onprem_has_no_container_app.snap
---
source: crates/quelch/src/azure/deploy/bicep.rs
expression: bicep
---
// .quelch/azure/ingest-onprem.bicep — generated by Quelch 0.11.1
// DO NOT EDIT MANUALLY — re-run `quelch azure plan` to regenerate.
//
// Quelch does not provision Cosmos, AI Search, Key Vault, Container
// Apps environment, App Insights, or the AI provider — those are
// referenced via `existing`.  See docs/getting-started.md for the
// prerequisites list.

@description('Resource naming prefix')
param prefix string = 'quelch'

@description('Environment name (e.g. prod, staging)')
param environment string = 'prod'

@description('Azure region for all resources')
param location string = resourceGroup().location

// ─────────────────────────────────────────────────────────────────
// References to existing resources (provisioned by the operator)
// ─────────────────────────────────────────────────────────────────

resource cosmos 'Microsoft.DocumentDB/databaseAccounts@2024-05-15' existing = {
  name: 'quelch-prod-cosmos'
}

resource search 'Microsoft.Search/searchServices@2024-03-01-preview' existing = {
  name: 'quelch-prod-search'
}

resource kv 'Microsoft.KeyVault/vaults@2024-04-01-preview' existing = {
  name: 'quelch-prod-kv'
}

resource cae 'Microsoft.App/managedEnvironments@2024-03-01' existing = {
  name: 'quelch-prod-cae'
}

resource appi 'Microsoft.Insights/components@2020-02-02' existing = {
  name: 'quelch-prod-appi'
}

resource aiAccount 'Microsoft.CognitiveServices/accounts@2024-10-01' existing = {
  name: 'test'
}

// ─────────────────────────────────────────────────────────────────
// Cosmos database + containers (managed by Quelch)
// ─────────────────────────────────────────────────────────────────

resource cosmosDb 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases@2024-05-15' = {
  parent: cosmos
  name: 'quelch'
  properties: {
    resource: {
      id: 'quelch'
    }
    options: {}
  }
}

resource jiraIssues 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-issues'
  properties: {
    resource: {
      id: 'jira-issues'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource confluencePages 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'confluence-pages'
  properties: {
    resource: {
      id: 'confluence-pages'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource jiraSprints 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-sprints'
  properties: {
    resource: {
      id: 'jira-sprints'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource jiraFixVersions 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-fix-versions'
  properties: {
    resource: {
      id: 'jira-fix-versions'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource jiraProjects 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'jira-projects'
  properties: {
    resource: {
      id: 'jira-projects'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource confluenceSpaces 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'confluence-spaces'
  properties: {
    resource: {
      id: 'confluence-spaces'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

resource quelchMeta 'Microsoft.DocumentDB/databaseAccounts/sqlDatabases/containers@2024-05-15' = {
  parent: cosmosDb
  name: 'quelch-meta'
  properties: {
    resource: {
      id: 'quelch-meta'
      partitionKey: {
        paths: [
          '/id'
        ]
        kind: 'Hash'
      }
    }
    options: {}
  }
}

// target: onprem — no Container App or managed identity emitted.
